# Sharia-Screening

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
config/: segment_rules.template.json  supplemental.template.json
data/: example.json  sec_supplemental.json  segment_rules.json  supplemental.json
docs/: ESTIMATES.md  FLOWCHART.txt  flowchart.dot  sharia-compliance-flowchart.dot
scripts/: create_flowchart.py  create_improved_flowchart.py  create_png_directly.py  create_png_flowchart.py  final_test_screener.py  generate_flowchart.py  generate_graphviz_flowchart.py  generate_visual.py  test_screener.py
sharia_screener/: __init__.py  api.py  cli.py  exceptions.py  models.py  screening.py
sharia_screener/datasources/: __init__.py  sec_xbrl_source.py  yfinance_source.py
sharia_screener/providers/: __init__.py  base.py  combined_provider.py  local_json.py  sec_xbrl_provider.py  unified_provider.py  yfinance_provider.py
src/: __init__.py  __main__.py  cli.py  flowchart_generator.py  screener.py
tests/: test_screening.py
