[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharia-screener"
version = "0.1.0"
description = "AAOIFI-based Sharia compliance screening tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ishaq" }
]
keywords = ["sharia", "AAOIFI", "screening", "finance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
sharia-screener = "sharia_screener.cli:main"

[tool.setuptools.packages.find]
include = ["sharia_screener*"]

[tool.pytest.ini_options]
addopts = "-q"
